CVDEV/force-app/main/default/objects/Customer_Reading__c/Customer_Reading__c.object-meta.xml
<CustomObject>
    <label>Customer Reading</label>
    <nameField>
        <label>Customer Reading Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Readings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>