CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <label>Demand</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>