CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/Generation_Reading__c.field-meta.xml
<CustomField>
    <fullName>Generation_Reading__c</fullName>
    <label>Generation Reading</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>