CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/Reading_10__c.field-meta.xml
<CustomField>
    <fullName>Reading_10__c</fullName>
    <label>Reading 10</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>