CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/Reading_11__c.field-meta.xml
<CustomField>
    <fullName>Reading_11__c</fullName>
    <label>Reading 11</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>