CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/Reading_Type__c.field-meta.xml
<CustomField>
    <fullName>Reading_Type__c</fullName>
    <label>Reading Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generation</fullName>
            </value>
            <value>
                <fullName>Consumption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>