CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/Supply_Reading__c.field-meta.xml
<CustomField>
    <fullName>Supply_Reading__c</fullName>
    <label>Supply Reading</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>