CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <precision>17</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>