CVDEV/force-app/main/default/objects/Customer_Reading__c/fields/Total_Supply__c.field-meta.xml
<CustomField>
    <fullName>Total_Supply__c</fullName>
    <label>Total Supply</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>